fixed sidebar more overflow error

--- a/style.css
+++ b/style.css
@@ -147,7 +147,7 @@ a.setting:hover {
 
 #main-container {
     width: calc(100% - 250px);
-    overflow-x: scroll;
+    overflow-x: hidden;
     min-height: 100vh;
     transition: all 0.3s;
     position: absolute;
